fix: make admin modal tabs horizontally scrollable on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,14 @@
 
 @variant dark (&:where(.dark, .dark *));
 
+@utility scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
+
 /* Contain Leaflet z-indexes so maps don't overlap modals/menus */
 .leaflet-container {
   z-index: 0;
